[tool.poetry]
name = "maybe_async"
version = "0.0.1"
description = ""
authors = ["George Fortunatov <qweeeze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
mypy = "^0.780"
isort = "^4.3.21"
pytest = "^5.4.3"
pytest-asyncio = "^0.12.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
