[tool.poetry]
name = "maybe_async"
version = "0.0.1"
description = "An experimental attempt to abstract away async/await semantics"
authors = ["George Fortunatov <qweeeze@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-asyncio = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
